# HackLifeBalance

./: .env.example  .gitignore  README.md  pyproject.toml
apps/users/core/: __init__.py  auth.py
apps/users/models/: __init__.py  auth.py  user.py
apps/users/serializers/: __init__.py  request.py
apps/users/services/: __init__.py  auth.py  user.py
apps/users/urls/: auth.py
apps/users/views/: __init__.py  auth.py
backend/api/: urls.py
backend/backend/: asgi.py  celery_app.py  urls.py
backend/backend/settings/: __init__.py  base.py
backend/core/: mixins.py
backend/core/constants/: courses.py  meetings.py  study_groups.py  users.py
backend/core/utils/: django_utils.py
backend/meetings/: models.py  serializers.py  urls.py  views.py
backend/meetings/migrations/: 0001_initial.py  0002_initial.py
backend/meetings/models/: __init__.py  meeting.py  question.py
backend/users/: admin.py  admin_inlines.py  permissions.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_remove_user_raw_password_alter_userrole_role.py
backend/users/models/: __init__.py  lecturer.py  role.py  user.py
config/: settings.py  urls.py
core/enums/: __init__.py  auth_types.py
core/exceptions/: __init__.py  bad_request.py  does_not_exist.py  field_does_not_exist.py  google_token_invalid.py  icorrect_file_format.py  incorrect_method.py  insufficient_permission.py  invalid_auth_type.py  invalid_password.py
core/services/: __init__.py  auth_config.py  email_template.py  exception_handler.py  image_service.py  string_generator.py  zip_service.py
docker/: Dockerfile
docker/compose/: app.yml  db.yml  main.yml  nginx.conf  ngnix.yml  prod.yml
infrastructure/: Dockerfile  docker-compose.local.yaml  docker-compose.yaml  nginx.conf
