[tool.poetry]
name = "hacklifebalance"
version = "0.1.0"
description = ""
authors = ["klim <klimrus61@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
black = "^23.10.0"
isort = "^5.12.0"
django = "^4.2.6"
djangorestframework = "^3.14.0"
environ = "^1.0"
rest-framework-simplejwt = "^0.0.2"
channels = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
