[tool.poetry]
name = "HackLife Balance"
version = "0.1.0"
description = ""
authors = ["Shorochov Klim <klimrus61@mail.ru>"]
readme = "README.md"

[tool.black]
line-length = 119
exclude = '''
    ^/.github
    | ^/infra
    | .*/migrations
    | .*/settings/
    | ^settings.py
    | ^/venv
    | ^/.venv
    | ^/.env
'''

[tool.isort]
profile = "black"
src_paths = ["isort", "tests"]
known_django = "django"
default_section = "THIRDPARTY"
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip = [
    "*/migrations",
    "*/settings",
    "*settings.py",
    "./.venv",
    "./.env",
    "./venv",
    "./.github",
    "./infra",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "backend.settings"
addopts = "--color=yes -p no:cacheprovider"
console_output_style = "progress"
testpaths = [
    "./vacancy_provider/tests/"
]
python_files = [
    "test_*.py",
    "tests.py",
    "*_test.py",
]

[tool.poetry.dependencies]
python = "^3.11.6"
psycopg = "^3.1.12"
djangorestframework = "^3.14.0"
django-filter = "^23.3"
drf-spectacular = "^0.26.5"
pillow = "^10.0.1"
django-ckeditor = "^6.7.0"
python-dotenv = "^1.0.0"
django-mdeditor = "^0.1.20"
psycopg-binary = "^3.1.12"
django = "^4.2.6"
gunicorn = "^21.2.0"
celery = {extras = ["redis"], version = "^5.3.4"}
django-celery-beat = "^2.5.0"
django-extensions = "^3.2.3"
pytest-django = "^4.5.2"
pytest = "^7.4.2"
pydantic = {extras = ["email"], version = "^2.4.2"}
uvicorn = "^0.23.2"
djoser = "^2.2.0"
social-auth-app-django = "^5.3.0"
gevent = "^23.9.1"
channels = {extras = ["daphne"], version = "^4.0.0"}
django-cors-headers = "^4.2.0"
rest-framework-simplejwt = "^0.0.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
flake8-bugbear = "^23.6.5"
flake8-deprecated = "^2.0.1"
flake8-comprehensions = "^3.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
